--- a/package.json
+++ b/package.json
@@ -4,17 +4,24 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "start": "nodemon index.ts",
+    "lint": "ts-standard",
+    "generate": "prisma generate",
     "db:reset": "prisma migrate reset",
     "db:migrate": "prisma migrate dev",
     "db:studio": "prisma studio",
     "db:start": "zsh ./db/start.sh"
   },
-  "author": "",
+  "author": "Kevin He",
   "license": "ISC",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^17.0.23",
+    "express": "^4.17.3",
+    "nodemon": "^2.0.15",
     "prisma": "^3.11.1",
     "ts-node": "^10.7.0",
+    "ts-standard": "^11.0.0",
     "typescript": "^4.6.3"
   },
   "dependencies": {
