--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.ts",
-    "debug": "nodemon --exec \"node --inspect-brk -r ts-node/register index.ts\"",
+    "start": "nodemon example.ts",
+    "debug": "nodemon --exec \"node --inspect-brk -r ts-node/register example.ts\"",
     "lint": "ts-standard",
     "generate": "prisma generate",
     "db:reset": "prisma migrate reset",
