--- a/package.json
+++ b/package.json
@@ -4,24 +4,14 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon example.ts",
-    "debug": "nodemon --exec \"node --inspect-brk -r ts-node/register example.ts\"",
-    "lint": "ts-standard",
-    "generate": "prisma generate",
-    "db:reset": "prisma migrate reset",
-    "db:migrate": "prisma migrate dev",
-    "db:studio": "prisma studio",
-    "db:start": "zsh ./db/start.sh"
+    "lint": "ts-standard"
   },
   "author": "Kevin He",
   "license": "ISC",
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^17.0.23",
-    "express": "^4.17.3",
-    "nodemon": "^2.0.15",
     "prisma": "^3.11.1",
-    "ts-node": "^10.7.0",
     "ts-standard": "^11.0.0",
     "typescript": "^4.6.3"
   },
